# WildTicTacToeBot

./: .gitignore  README.md  WildTicTacToeBot.cabal
app/: Main.hs
src/: BencodeWithoutListsParser.hs  DataBoardSpace.hs  Lib.hs  PlayAlgorithm.hs
test/: Spec.hs
