name:                WildTicTacToeBot
version:             0.1.0.0
synopsis:            Package that automatically plays wild tic-tac-toe
homepage:            https://github.com/viliusmikoliunas/WildTicTacToeBot#readme
author:              Vilius Mikoliūnas
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/viliusmikoliunas/WildTicTacToeBot#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , BencodeWithoutListsParser
                     , DataBoardSpace
                     , PlayAlgorithm
  build-depends:       base >= 4.7 && < 5
                     , network-uri
  default-language:    Haskell2010

executable WildTicTacToeBot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , WildTicTacToeBot
                     , HTTP
  default-language:    Haskell2010

test-suite WildTicTacToeBot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , WildTicTacToeBot
                     , hspec >= 2.4.4
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/viliusmikoliunas/WildTicTacToeBot
